--- a/app/!Last/package.json
+++ b/app/!Last/package.json
@@ -1,8 +1,7 @@
 {
-     "name": "npmdemo",
+     "name": "azurerep",
      "version": "1.0.0",
      "dependencies": {
         "express": "*"
-
      }
 }
